# dmplugin

./: CMakeLists.txt  README.md  build_clang.bat
examples/dmplugin/: main.cpp
include/: dmguid.h  dmiplugin.h  dmiunknown.h  dmplugin.h  dmplugin_config.h  dmplugin_config.h.in  dmpluginmanager.h  dmunknown.h
loader/dmpluginloader/: main.cpp
plugins/sampleplugin/: sampleplugin.cpp  sampleplugin.h
src/libdmplugin/: dmbaseunknown.h  dmguid.cpp  dmpluginmanager_impl.cpp  dmpluginmanager_impl.h  libdmplugin.def  libdmplugin_impl.cpp  libdmplugin_impl.h
test/dmplugintest/: dmplugintest.cpp
